--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import-normalize;
+@import 'xxx/b.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  color: $red;
 }
