--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,14 @@
 @import-normalize;
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{margin: 0; padding: 0; box-sizing: border-box; }
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+ul,ol {
+  list-style: none;
+}
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
