--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import-normalize;
+@import 'helper.scss';
 *{margin: 0; padding: 0; box-sizing: border-box; }
 *::before,
 *::after {
@@ -11,4 +12,8 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+body {
+  font-family: $font-hei;
+  font-size: 16px;
+  line-height: 1.2;
+}
