--- a/src/index.scss
+++ b/src/index.scss
@@ -22,8 +22,8 @@ body {
   width: 1em;
   height: 1em;
 }
-button {
-  font-family: inherit;
+button, input{
+  font: inherit;
 }
 :focus {
   outline: none;
