--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,7 @@ body {
   font-family: $font-hei;
   font-size: 16px;
   line-height: 1.2;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 .icon {
   width: 1em;
